#33 remove debug benchmark json